--- a/styles/style.css
+++ b/styles/style.css
@@ -1,141 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 /* ~~~~~~~~~~~~~~~ Reset Style ~~~~~~~~~~~~~~~ */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-html {
-    height: 100%;
-}
-
-body {
-    line-height: 1;
-    font-family: Raleway;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;}
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {display: block;}
+html {height: 100%;}
+body {line-height: 1;}
+ol, ul {list-style: none;}
+blockquote, q {quotes: none;}
+blockquote:before, blockquote:after,
+q:before, q:after {content: ''; content: none;}
+table {border-collapse: collapse; border-spacing: 0;}
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 .container {
     margin: 0 auto;
@@ -406,6 +293,7 @@ footer {
     -ms-border-radius: 14px;
     -o-border-radius: 14px;
 }
+
 .modal-button {
     font-size: 14px !important;
     padding: 16px 27px;
@@ -564,20 +452,11 @@ fieldset {
     width: 100%;
     border: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.button-group {
+.radio-group {
     width: 100%;
-    margin: auto;
-
-}
-
-.button-group input[type="radio"] {
-    display: none;
-}
-
-.button-group label {
     padding: 15px 23px;
     cursor: pointer;
     color: rgb(0, 0, 0);
@@ -589,28 +468,38 @@ fieldset {
     border: 2px solid #ABABAB;
 }
 
-.button-group input[type="radio"]:checked+label {
+.radio-group input[type="radio"] {
+    display: none;
+}
+
+.radio-group input[type="radio"]:checked+label {
     background-color: #F1F4FE;
     color: #385BD2;
     border: 2px solid #385BD2;
 }
+
 .unknown-level {
     color: #385AD2;
 }
+
 .unknown-level__active {
     text-decoration: none !important;
     color: #000 !important;
     cursor: default;
 }
-.unknown-level__active a{
+
+.unknown-level__active a {
     text-decoration: none !important;
 }
+
 .back-button {
     color: #385AD2 !important;
 }
+
 .unknown-back {
     display: none;
 }
+
 .unknown-back__active {
     display: block;
 }
