--- a/styles/style.css
+++ b/styles/style.css
@@ -142,103 +142,124 @@ table {
         display: none !important;
     }
 }
+
 @media(max-width:1111px) {
     .action__title {
         max-width: 391px;
     }
 }
+
 @media(max-width:974px) {
     .button {
         font-size: 14px !important;
     }
+
     .action__title {
         font-size: 18px !important;
     }
+
     .action__subtitle {
         font-size: 13px !important;
     }
 }
+
 @media(max-width:927px) {
     .action__title {
         max-width: 290px;
     }
+
     .action__subtitle {
         max-width: 290px;
     }
 }
+
 @media(max-width:830px) {
     .button {
         margin-top: 15px;
         width: fit-content !important;
     }
+
     .action-info {
         flex-direction: column !important;
         width: 100% !important;
     }
+
     .action__title {
         max-width: none !important;
     }
+
     .action__subtitle {
         max-width: none !important;
     }
 }
+
 @media(max-width:613px) {
     .main-content__title {
         font-size: 26px !important;
         max-width: none !important;
     }
+
     .main-content__subtitle {
         font-size: 17px !important;
         max-width: none !important;
     }
+
     .info {
         gap: 23px !important;
     }
+
     .info-button {
         padding: 16px 37px !important;
     }
 }
+
 @media(max-width:544px) {
     .action {
         padding: 32px 40px;
     }
+
     .button {
         width: 62% !important;
     }
+
     .bg-circle {
         left: 20px !important;
         height: 210px !important;
         width: 210px !important;
     }
+
     .bg-circle__red {
         right: 200px !important;
         height: 210px !important;
         width: 210px !important;
     }
 }
+
 @media(max-width:464px) {
     .action {
         padding: 37px 41px !important;
     }
 }
+
 @media(max-width:375px) {
     .button {
         padding: 14px 36px !important;
         width: 68% !important;
         font-size: 12px !important;
     }
+
     .action {
         padding: 32px 33px !important;
     }
 }
-@media(max-width:375px) {
 
-}
+@media(max-width:375px) {}
 
 .container {
     margin: 0 auto;
     width: 85%;
 }
+
 .logo {
     display: flex;
     align-items: center;
@@ -509,6 +530,7 @@ footer {
     -ms-border-radius: 14px;
     -o-border-radius: 14px;
 }
+
 .modal-button {
     font-size: 14px !important;
     padding: 16px 27px;
@@ -697,23 +719,29 @@ fieldset {
     color: #385BD2;
     border: 2px solid #385BD2;
 }
+
 .unknown-level {
     color: #385AD2;
 }
+
 .unknown-level__active {
     text-decoration: none !important;
     color: #000 !important;
     cursor: default;
 }
-.unknown-level__active a{
+
+.unknown-level__active a {
     text-decoration: none !important;
 }
+
 .back-button {
     color: #385AD2 !important;
 }
+
 .unknown-back {
     display: none;
 }
+
 .unknown-back__active {
     display: block;
 }
