--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
-
 /* ~~~~~~~~~~~~~~~ Reset Style ~~~~~~~~~~~~~~~ */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -13,7 +12,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; font: inherit; vertical-align: baseline;}
+time, mark, audio, video {margin: 0; padding: 0; border: 0; font-size: 100%; vertical-align: baseline;}
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {display: block;}
 html {height: 100%;}
@@ -24,6 +23,7 @@ blockquote:before, blockquote:after,
 q:before, q:after {content: ''; content: none;}
 table {border-collapse: collapse; border-spacing: 0;}
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
 @media(min-width:1880px) {
     .container {
         width: 72% !important;
@@ -188,21 +188,6 @@ table {border-collapse: collapse; border-spacing: 0;}
         padding: 32px 33px !important;
     }
 }
-
-
-@font-face {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 400;
-    src: url(https://fonts.gstatic.com/s/raleway/v23/1Ptug8zYS_SKggPNwIYqWqZPBQ.ttf) format('truetype');
-}
-@font-face {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 700;
-    src: url(https://fonts.gstatic.com/s/raleway/v23/1Ptug8zYS_SKggPNwIYqWqZPBQ.woff2) format('woff2');
-}
-
 .container {
     margin: 0 auto;
     width: 85%;
