--- a/styles/style.css
+++ b/styles/style.css
@@ -23,21 +23,39 @@ blockquote:before, blockquote:after,
 q:before, q:after {content: ''; content: none;}
 table {border-collapse: collapse; border-spacing: 0;}
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
-
 @media(min-width:1880px) {
     .container {
         width: 72% !important;
     }
 }
-@media(max-width:990px) {
-    .character {
-        display: none !important;
+
+@media(max-width:1400px) {
+    .tests {
+        width: 65% !important;
     }
 }
 
 @media(max-width:1111px) {
     .action__title {
         max-width: 391px;
+    }
+
+    .tests-page div .bg-circle {
+        left: 20px !important;
+        height: 210px !important;
+        width: 210px !important;
+    }
+
+    .tests-page div .bg-circle__red {
+        right: 200px !important;
+        height: 210px !important;
+        width: 210px !important;
+    }
+}
+
+@media(max-width:990px) {
+    .character {
+        display: none !important;
     }
 }
 
@@ -85,11 +103,25 @@ table {border-collapse: collapse; border-spacing: 0;}
     .action__button {
         margin-top: 25px;
     }
+
+    h3 {
+        font-size: 18px !important;
+    }
+
+    .tests__top-item {
+        font-size: 15px !important;
+    }
 }
 
 @media(max-height: 700px) {
     .close {
         top: -32px !important;
+    }
+}
+
+@media(max-width:700px) {
+    .tests {
+        width: 85% !important;
     }
 }
 
@@ -143,6 +175,18 @@ table {border-collapse: collapse; border-spacing: 0;}
     }
     fieldset {
         gap: 10px !important;
+    }
+
+    .tests__top-item {
+        padding: 16px 25px !important;
+    }
+
+    .tests__main {
+        padding: 31px 49px !important;
+    }
+
+    .tests__answer {
+        padding: 16px 35px !important;
     }
 }
 
@@ -200,6 +244,27 @@ table {border-collapse: collapse; border-spacing: 0;}
         font-size: 14px !important;
     }
 
+    .tests {
+        margin: 51px auto !important;
+    }
+
+    h3 {
+        font-size: 16px !important;
+    }
+
+    .tests-page div .bg-circle {
+        right: 20px !important;
+        height: 174px !important;
+        width: 130px !important;
+    }
+
+    .tests__main {
+        padding: 31px 28px !important;
+    }
+
+    .tests__top-item:nth-child(1) {
+        width: 55%;
+    }
 }
 
 @media(max-width:375px) {
@@ -211,6 +276,10 @@ table {border-collapse: collapse; border-spacing: 0;}
 
     .action {
         padding: 32px 33px !important;
+    }
+
+    .tests__top-item:nth-child(1) {
+        width: 45% !important;
     }
 }
 .container {
@@ -245,6 +314,11 @@ main {
     margin-top: 51px;
 }
 
+h3 {
+    font-size: 20px;
+    font-weight: 400;
+}
+
 .main-content {
     display: flex;
     justify-content: space-between;
@@ -263,6 +337,12 @@ main {
     gap: 27px;
     text-align: left;
     max-width: 700px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
 }
 
 .button {
@@ -304,6 +384,25 @@ main {
 
 .button:hover {
     background-color: #385AD2;
+    transform: scale(98%);
+    -webkit-transform: scale(98%);
+    -moz-transform: scale(98%);
+    -ms-transform: scale(98%);
+    -o-transform: scale(98%);
+}
+
+.mini-btn {
+    width: fit-content;
+    display: block;
+    padding: 14px 39px;
+}
+
+.transparent-btn {
+    background-color: transparent;
+    color: #385AD2;
+}
+.transparent-btn:hover {
+    background-color: transparent;
     transform: scale(98%);
     -webkit-transform: scale(98%);
     -moz-transform: scale(98%);
@@ -460,7 +559,100 @@ footer {
     font-weight: 400;
     font-size: 16;
     text-align: center;
+    width: 100%;
     padding: 56px 0;
+}
+
+/* Tests */
+.tests {
+    width: 47%;
+    margin: 85px auto;
+}
+
+.tests__top {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tests__top-item {
+    display: flex;
+    align-items: center;
+    padding: 16px 44px;
+    background-color: white;
+    font-size: 17px;
+    font-weight: 400;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+}
+
+.tests__main {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    text-align: center;
+    margin-top: 29px;
+    background-color: white;
+    padding: 31px 79px;
+    border-radius: 22px;
+    -webkit-border-radius: 22px;
+    -moz-border-radius: 22px;
+    -ms-border-radius: 22px;
+    -o-border-radius: 22px;
+}
+
+.tests__answers {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.tests__answer {
+    background-color: #F9F9F9;
+    border: solid 1px rgba(0, 0, 0, 0.13);
+    cursor: pointer;
+    padding: 16px 54px;
+    color: #3A3A3A;
+    text-align: left;
+    transition: 0.2s;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    -webkit-transition: 0.2s;
+    -moz-transition: 0.2s;
+    -ms-transition: 0.2s;
+    -o-transition: 0.2s;
+}
+
+.tests__answer:hover {
+    background-color: #f5f5f5;
+    transform: scale(99%);
+    -webkit-transform: scale(99%);
+    -moz-transform: scale(99%);
+    -ms-transform: scale(99%);
+    -o-transform: scale(99%);
+}
+
+.tests__answer.active {
+    background-color: #EDF0FA;
+    border-color: #385AD2;
+}
+
+.tests-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.content {
+    min-height: 100%;
+    position: relative;
 }
 
 /* Modals */
