--- a/styles/style.css
+++ b/styles/style.css
@@ -377,6 +377,10 @@ h3 {
     color: #5faf78;
 }
 
+.main__button span.red {
+    color: #af5f5f;
+}
+
 .button a {
     text-decoration: none;
     color: #FFFFFF;
@@ -762,6 +766,7 @@ footer {
 }
 
 .modal-content input {
+    outline: none;
     border: solid 1px #ABABAB;
     width: 100%;
     padding: 15px 25px;
