--- a/styles/style.css
+++ b/styles/style.css
@@ -647,6 +647,17 @@ footer {
     border-color: #385AD2;
 }
 
+/* Ховаємо стандартний radio input */
+.tests__answer input[type="radio"] {
+    display: none;
+}
+
+/* Додаємо кастомну стилізацію для вибраного варіанту */
+.tests__answer input[type="radio"]:checked + span {
+    background: #a138d2;
+    color: #fff;
+}
+
 .tests-page {
     display: flex;
     justify-content: center;
